# Resnet50-from-scratch

./: .gitignore  README.md  resnet50_parser.py
model/: resnet50_parser.py
model_cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conv_layers.cpp  conv_layers.h  debug.h  file_loader.cpp  file_loader.h  label.h  layer_computer.cpp  layer_computer.h  layer_operations.cpp  main.cpp  model_cpp
model_python/: data_preparation.py  layer_computation.py  layer_operations.py  layers.py  main_inference.py
resnet50_weight/: resnet50_conv1.txt  resnet50_layer1_bottleneck0_conv2.txt  resnet50_layer1_bottleneck1_conv2.txt  resnet50_layer1_bottleneck2_conv2.txt  resnet50_layer2_bottleneck0_conv2.txt  resnet50_layer2_bottleneck1_conv2.txt  resnet50_layer2_bottleneck2_conv2.txt  resnet50_layer2_bottleneck3_conv2.txt
